[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/StorePage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/game_controller.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GaragePage.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/game_data_manager.gd" type="Script" id=5]
[ext_resource path="res://Scripts/game_constants.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Environment.tscn" type="PackedScene" id=7]
[ext_resource path="res://GraphicAssets/Cars/carSedan/carSedan_spriteframes.tres" type="SpriteFrames" id=8]
[ext_resource path="res://Scripts/car_sprite_controller.gd" type="Script" id=9]
[ext_resource path="res://Scripts/environment_controller.gd" type="Script" id=10]
[ext_resource path="res://Scripts/car_controller.gd" type="Script" id=11]
[ext_resource path="res://Scripts/purchase_manager.gd" type="Script" id=12]
[ext_resource path="res://GraphicAssets/Fonts/kenpixel.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://GraphicAssets/UI/Store/StoreBackgrounds/storeBg.png" type="Texture" id=14]
[ext_resource path="res://GraphicAssets/Fonts/kenpixel.tres" type="DynamicFont" id=15]
[ext_resource path="res://GraphicAssets/UI/Store/rectangle.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.254, 66.7822 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 833, 359 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.384314, 0.384314, 0.384314, 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 56, 31 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="GameConstants" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GameDataManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Environment" parent="." instance=ExtResource( 7 )]
script = ExtResource( 10 )

[node name="HUDPanel" parent="." instance=ExtResource( 1 )]

[node name="Car" type="Area2D" parent="."]
position = Vector2( 256, 512 )
script = ExtResource( 11 )

[node name="CarSprite" type="AnimatedSprite" parent="Car"]
frames = ExtResource( 8 )
frame = 2
script = ExtResource( 9 )

[node name="CarShape2D" type="CollisionShape2D" parent="Car"]
shape = SubResource( 1 )

[node name="StorePage" parent="." instance=ExtResource( 2 )]
visible = false

[node name="GaragePage" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PositionLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="."]
visible = false
margin_left = 200.0
margin_right = 240.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0.0	"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PurchaseManager" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="WaitPanel" type="Panel" parent="PurchaseManager"]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitFramePanel" type="Panel" parent="PurchaseManager/WaitPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -80.0
margin_right = 240.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 3 )

[node name="WaitLabel" type="Label" parent="PurchaseManager/WaitPanel/WaitFramePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -27.0
margin_right = 399.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Please wait..."

[node name="PurchaseNotificationPanel" type="Panel" parent="PurchaseManager"]
visible = false
margin_left = 370.0
margin_top = 320.0
margin_right = 790.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockingPanel" type="Panel" parent="PurchaseManager/PurchaseNotificationPanel"]
margin_left = -370.0
margin_top = -320.0
margin_right = 910.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePanel" type="Panel" parent="PurchaseManager/PurchaseNotificationPanel"]
margin_right = 420.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="PurchaseManager/PurchaseNotificationPanel/TitlePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -19.0
margin_right = 130.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 15 )
text = "Purchase received"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="PurchaseManager/PurchaseNotificationPanel"]
margin_left = 4.0
margin_top = 43.0
margin_right = 416.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Purchase"
align = 1

[node name="OKButton" type="Button" parent="PurchaseManager/PurchaseNotificationPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -42.5
margin_top = -36.0
margin_right = 42.5
margin_bottom = -5.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
custom_styles/normal = SubResource( 8 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Car" to="Car" method="_car_input_event"]
[connection signal="pressed" from="PurchaseManager/PurchaseNotificationPanel/OKButton" to="PurchaseManager" method="_on_OK_button_pressed"]
